# bhd_app

./: .gitignore  .pre-commit-config.yaml  ADAPTIVE_MODE_IMPLEMENTATION.md  ANALYSIS_AND_RECOMMENDATIONS.md  CHANGELOG.md  CHANGES_IMPLEMENTED.md  IMPROVEMENTS_PATCH.md  QUICKSTART.md  README.md  TESTING_SUMMARY.md  USAGE_GUIDE.md  VERIFICATION_CLI_ENTRYPOINT.md  WORKFLOW_COMPARISON.md  bhd-cli  bhd.py  load_keys.sh  pyproject.toml
.github/workflows/: ci.yml
engagements/: .current
engagements/taimaishu-test-20260215-062439/: engagement.json  report.md
engagements/tms-test3-home-test-20260215-065244/: engagement.json  report.md
engagements/tyler-test-20260215-052340/: engagement.json  report.md
scripts/: check_playbook_safety.py  validate_policy.py  validate_schemas.py
src/bhd_cli/: __init__.py  __main__.py  cli.py  storage.py
src/bhd_cli/assistant/: IMPLEMENTATION_SUMMARY.md  POLICY.md  README.md  SECURITY.md  __init__.py  __main__.py
src/bhd_cli/assistant/adapters/: __init__.py
src/bhd_cli/assistant/cli/: __init__.py  main.py
src/bhd_cli/assistant/core/: __init__.py  adaptive_mode.py  entities.py  hypothesis_drafter.py  ports.py  schema_validator.py
src/bhd_cli/assistant/playbooks/: README.md  __init__.py  loader.py  selector.py
src/bhd_cli/assistant/policy/: __init__.py  guard.py
src/bhd_cli/assistant/schemas/: finding_draft.schema.json  hypothesis.schema.json  observation.schema.json
tests/: test_smoke.py
tests/assistant/: __init__.py  test_adaptive_mode.py  test_hypothesis_drafter.py  test_integration_e2e.py  test_llm_router.py  test_policy_guard_adaptive.py
tests/assistant/adapters/: test_nmap_parser.py  test_storage.py
tests/assistant/integration/: test_exporter.py
tests/assistant/playbooks/: __init__.py  test_loader.py  test_selector.py
tests/assistant/policy/: __init__.py  test_guard.py
(+13 files in other folders)
