[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bhd-cli"
version = "1.0.0"
description = "Penetration testing engagement and finding management CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Black Hat Defense LLC"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
bhd-cli = "bhd_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bhd_cli = ["py.typed"]
